--- a/deploy/cloudformation.template.yaml
+++ b/deploy/cloudformation.template.yaml
@@ -14,6 +14,8 @@ Parameters:
     Type: String
   AuthorizeCallbackUri:
     Type: String
+  DomainName:
+    Type: String
 Resources:
   OAuthFirstLegLambda:
     Type: AWS::Serverless::Function
