--- a/deploy/cloudformation.template.yaml
+++ b/deploy/cloudformation.template.yaml
@@ -190,6 +190,23 @@ Resources:
             Ref: OAuthCustomHeaders
           AUTHORIZE_CALLBACK_URI:
             Ref: AuthorizeCallbackUri
+  DomainNameARecord:
+    Type: 'AWS::Route53::RecordSetGroup'
+    Properties:
+      Comment: Points to an API Gateway Custom Domain a.k.a. CloudFront Distribution
+      HostedZoneId: Z2LBG8W17PXZI7
+      RecordSets:
+        - Name: oauthproxy.dev.sourceallies.com
+          Type: A
+          AliasTarget:
+            HostedZoneId: Z2FDTNDATAQYW2
+            DNSName: !Ref DistributionDomainName
+  AppBasePathMapping:
+    Type: "AWS::ApiGateway::BasePathMapping"
+    Properties:
+      BasePath: app
+      DomainName: oauthproxy.dev.sourceallies.com
+      RestApiId: !Ref RestApiId
 Outputs:
   ApiURL:
     Description: API endpoint for the lambdas
