--- a/deploy/cloudformation.template.yaml
+++ b/deploy/cloudformation.template.yaml
@@ -21,6 +21,8 @@ Parameters:
     Type: String
   CertificateArn:
     Type: String
+  DistributionDomainName:
+    Type: String
 Resources:
   OAuthFirstLegLambda:
     Type: AWS::Serverless::Function
@@ -197,22 +199,17 @@ Resources:
       Comment: Points to an API Gateway Custom Domain a.k.a. CloudFront Distribution
       HostedZoneId: !Ref DomainParentHostedZoneID
       RecordSets:
-        - Name: !Ref CustomDomain
+        - Name: !Ref Domain
           Type: A
           AliasTarget:
             HostedZoneId: Z2FDTNDATAQYW2
-            DNSName: !GetAtt CustomDomain.DistributionDomainName
+            DNSName: !Ref DistributionDomainName
   AppBasePathMapping:
     Type: "AWS::ApiGateway::BasePathMapping"
     Properties:
       BasePath: app
-      DomainName: !Ref CustomDomain
+      DomainName: !Ref Domain
       RestApiId: !Ref RestApiId
-  CustomDomain:
-    Type: AWS::ApiGateway::DomainName
-    Properties:
-      CertificateArn: !Ref CertificateArn
-      DomainName: !Ref DomainName
 Outputs:
   ApiURL:
     Description: API endpoint for the lambdas
