--- a/deploy/cloudformation.template.yml
+++ b/deploy/cloudformation.template.yml
@@ -38,7 +38,7 @@ Resources:
       Policies:
         - !Ref BasicOAuthLambdaExecutionPolicy
         - !ImportValue SharedSecurity-PipelineKeyDecryptPolicyArn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Timeout: 30
       MemorySize: 256
       Events:
@@ -66,7 +66,7 @@ Resources:
       Policies:
         - !Ref BasicOAuthLambdaExecutionPolicy
         - !ImportValue SharedSecurity-PipelineKeyDecryptPolicyArn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Timeout: 30
       MemorySize: 256
       Events:
@@ -94,7 +94,7 @@ Resources:
       Policies:
         - !Ref BasicOAuthLambdaExecutionPolicy
         - !ImportValue SharedSecurity-PipelineKeyDecryptPolicyArn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Timeout: 30
       MemorySize: 256
       Events:
@@ -122,7 +122,7 @@ Resources:
       Policies:
         - !Ref BasicOAuthLambdaExecutionPolicy
         - !ImportValue SharedSecurity-PipelineKeyDecryptPolicyArn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Timeout: 30
       MemorySize: 256
       Events:
@@ -150,7 +150,7 @@ Resources:
       Policies:
         - !Ref BasicOAuthLambdaExecutionPolicy
         - !ImportValue SharedSecurity-PipelineKeyDecryptPolicyArn
-      Runtime: nodejs8.10
+      Runtime: nodejs10.x
       Timeout: 30
       MemorySize: 256
       Events:
