Pass custom headers from event. Set post content-type from config
Co-authored-by: Neil Bode <nbode@sourceallies.com>

--- a/template.yml
+++ b/template.yml
@@ -81,7 +81,8 @@ Resources:
           AUTHORIZE_CALLBACK_URI:
           SNS_SUCCESS_ARN:
           SNS_NONSUCCESS_ARN:
-  OAuthSignRequestGetLambda:
+          POST_CONTENT_TYPE:
+OAuthSignRequestGetLambda:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri:
