--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "node -r dotenv/config App.js",
     "coverage": "jest --coverage --collectCoverageFrom=src/**/*.{js,jsx} --collectCoverageFrom=App.js",
-    "test": "jest --watchAll",
+    "test": "jest",
     "coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "build": "webpack-cli --mode production --config ./webpack.config.js",
     "lint": "eslint ."
