--- a/template.yml
+++ b/template.yml
@@ -1,10 +1,26 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
-Description: aws-oauth-1.0-proxy
+Description: >
+  aws-oauth-1.0-proxy
+
+  Proxy on AWS for John Deere
+
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
     Timeout: 3
+
+Parameters:
+  ClientKey:
+    Type: String
+  ClientSecret:
+    Type: String
+  ApiUrl:
+    Type: String
+  OAuthCustomHeaders:
+    Type: String
+  AuthorizeCallbackUri:
+    Type: String
 Resources:
   BasicOAuthLambdaExecutionPolicy:
     Type: AWS::IAM::ManagedPolicy
@@ -31,7 +47,7 @@ Resources:
       CodeUri:
       Description: OAuth First Leg Lambda Function
       FunctionName: oauth-first-leg
-      Handler: App.firstLegHandler
+      Handler: app.firstLegHandler
       Policies:
         - !Ref BasicOAuthLambdaExecutionPolicy
         - !ImportValue SharedSecurity-PipelineKeyDecryptPolicyArn
@@ -46,20 +62,48 @@ Resources:
             Method: post
       Environment:
         Variables:
-          CLIENT_KEY:
-          CLIENT_SECRET:
-          API_URL:
-          OAUTH_CUSTOM_HEADERS:
-          AUTHORIZE_CALLBACK_URI:
-          SNS_SUCCESS_ARN:
-          SNS_NONSUCCESS_ARN:
+          CLIENT_KEY: !Ref ClientKey
+          CLIENT_SECRET: !Ref ClientSecret
+          API_URL: !Ref ApiUrl
+          OAUTH_CUSTOM_HEADERS: !Ref OAuthCustomHeaders
+          AUTHORIZE_CALLBACK_URI: !Ref AuthorizeCallbackUri
+          SNS_SUCCESS_ARN: !Ref SuccessTopic
+          SNS_NONSUCCESS_ARN: !Ref FailTopic
+  OAuthThirdLegLambda:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri:
+      Description: OAuth Third Leg Lambda Function
+      FunctionName: oauth-third-leg
+      Handler: app.thirdLegHandler
+      Policies:
+        - !Ref BasicOAuthLambdaExecutionPolicy
+        - !ImportValue SharedSecurity-PipelineKeyDecryptPolicyArn
+      Runtime: nodejs10.x
+      Timeout: 30
+      MemorySize: 256
+      Events:
+        PostResource:
+          Type: Api
+          Properties:
+            Path: /thirdLegAuth
+            Method: post
+      Environment:
+        Variables:
+          CLIENT_KEY: !Ref ClientKey
+          CLIENT_SECRET: !Ref ClientSecret
+          API_URL: !Ref ApiUrl
+          OAUTH_CUSTOM_HEADERS: !Ref OAuthCustomHeaders
+          AUTHORIZE_CALLBACK_URI: !Ref AuthorizeCallbackUri
+          SNS_SUCCESS_ARN: !Ref SuccessTopic
+          SNS_NONSUCCESS_ARN: !Ref FailTopic
   OAuthSignRequestPostLambda:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri:
       Description: OAuth Sign Request Post Lambda Function
       FunctionName: oauth-sign-request-post
-      Handler: App.oAuthSignRequestPost
+      Handler: app.oAuthSignRequestPost
       Policies:
         - !Ref BasicOAuthLambdaExecutionPolicy
         - !ImportValue SharedSecurity-PipelineKeyDecryptPolicyArn
@@ -74,20 +118,20 @@ Resources:
             Method: post
       Environment:
         Variables:
-          CLIENT_KEY:
-          CLIENT_SECRET:
-          API_URL:
-          AUTHORIZE_CALLBACK_URI:
-          SNS_SUCCESS_ARN:
-          SNS_NONSUCCESS_ARN:
-          POST_CONTENT_TYPE:
+          CLIENT_KEY: !Ref ClientKey
+          CLIENT_SECRET: !Ref ClientSecret
+          API_URL: !Ref ApiUrl
+          OAUTH_CUSTOM_HEADERS: !Ref OAuthCustomHeaders
+          AUTHORIZE_CALLBACK_URI: !Ref AuthorizeCallbackUri
+          SNS_SUCCESS_ARN: !Ref SuccessTopic
+          SNS_NONSUCCESS_ARN: !Ref FailTopic
   OAuthSignRequestGetLambda:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri:
       Description: OAuth Sign Request Get Lambda Function
       FunctionName: oauth-sign-request-get
-      Handler: App.oAuthSignRequestGet
+      Handler: app.oAuthSignRequestGet
       Policies:
         - !Ref BasicOAuthLambdaExecutionPolicy
         - !ImportValue SharedSecurity-PipelineKeyDecryptPolicyArn
@@ -102,20 +146,20 @@ Resources:
             Method: get
       Environment:
         Variables:
-          CLIENT_KEY:
-          CLIENT_SECRET:
-          API_URL:
-          OAUTH_CUSTOM_HEADERS:
-          AUTHORIZE_CALLBACK_URI:
-          SNS_SUCCESS_ARN:
-          SNS_NONSUCCESS_ARN:
+          CLIENT_KEY: !Ref ClientKey
+          CLIENT_SECRET: !Ref ClientSecret
+          API_URL: !Ref ApiUrl
+          OAUTH_CUSTOM_HEADERS: !Ref OAuthCustomHeaders
+          AUTHORIZE_CALLBACK_URI: !Ref AuthorizeCallbackUri
+          SNS_SUCCESS_ARN: !Ref SuccessTopic
+          SNS_NONSUCCESS_ARN: !Ref FailTopic
   OAuthSignRequestDeleteLambda:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri:
       Description: OAuth Sign Request Delete Lambda Function
       FunctionName: oauth-sign-request-delete
-      Handler: App.oAuthSignRequestDelete
+      Handler: app.oAuthSignRequestDelete
       Policies:
         - !Ref BasicOAuthLambdaExecutionPolicy
         - !ImportValue SharedSecurity-PipelineKeyDecryptPolicyArn
@@ -130,12 +174,13 @@ Resources:
             Method: delete
       Environment:
         Variables:
-          CLIENT_KEY:
-          CLIENT_SECRET:
-          API_URL:
-          AUTHORIZE_CALLBACK_URI:
-          SNS_SUCCESS_ARN:
-          SNS_NONSUCCESS_ARN:
+          CLIENT_KEY: !Ref ClientKey
+          CLIENT_SECRET: !Ref ClientSecret
+          API_URL: !Ref ApiUrl
+          OAUTH_CUSTOM_HEADERS: !Ref OAuthCustomHeaders
+          AUTHORIZE_CALLBACK_URI: !Ref AuthorizeCallbackUri
+          SNS_SUCCESS_ARN: !Ref SuccessTopic
+          SNS_NONSUCCESS_ARN: !Ref FailTopic
   SuccessTopic:
     Type: AWS::SNS::Topic
     Properties:
