don't run tests from generated .aws-sam folder

--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
   "jest": {
     "setupFiles": [
       "./test/jestSetup.js"
+    ],
+    "modulePathIgnorePatterns": [
+      ".aws-sam"
     ]
   },
   "dependencies": {
